Добавила в игнор папку с исходниками проекта Добавила файл индекс Создала рабочее пространство

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
+ 
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Барбершоп</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+ 
+  <title><Барбершоп БОРОДИНСКИЙ></title>
+  <meta name="description" content="Барбершоп БОРОДИНСКИЙ">
+  <meta name="autor" content="iviro">
+ 
+  <link rel="stylesheet" href="css/styles.css">
+ 
+</head>
+ 
+<body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
+  
+  <script src="js/scripts.js"></script>
+</body>
 </html>
